--- a/01_philosophy/index.html
+++ b/01_philosophy/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Daulet Baimurza, Azamat Baimurza">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="brand/favicon.svg" rel="icon">
+  <link href="brand/favicon.svg" rel="apple-touch-icon">
   <style>
     body { background-color:#f7f9fc; }
     .hero { background: linear-gradient(135deg,#ffffff,#eef4ff); border-bottom:1px solid #e8eef7; }
@@ -12,13 +16,15 @@
     .list-check li::marker { content:"✓  "; color:#198754; }
     code { background:#f1f5f9; padding:.15rem .35rem; border-radius:.25rem; }
   </style>
-
   <title>Tengri Language — Home</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
   <div class="container">
-    <a class="navbar-brand fw-semibold" href="index.html">Tengri Language</a>
+    <a class="navbar-brand fw-semibold" href="index.html">
+      <img src="brand/logo.svg" alt="tengri-logo">
+      Tengri Language
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample" aria-controls="navbarsExample" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
